Bug 70411 - glInvalidateFramebuffer fails with GL_INVALID_ENUM
Summary: glInvalidateFramebuffer fails with GL_INVALID_ENUM
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: 9.2
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-12 22:28 UTC by Constantin Baranov
Modified: 2013-10-14 15:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Add missing switch break (732 bytes, text/plain)
2013-10-12 22:28 UTC, Constantin Baranov
Details

Description Constantin Baranov 2013-10-12 22:28:05 UTC
Created attachment 87535 [details]
Add missing switch break

The call:
glInvalidateFramebuffer(GL_READ_FRAMEBUFFER, 1, &(GLenum){GL_COLOR_ATTACHMENT0});
gives me GL_INVALID_ENUM. An FBO with only single color attachment is bound to GL_READ_FRAMEBUFFER.
Comment 1 Brian Paul 2013-10-14 15:06:17 UTC
Thanks!  I'll commit this shortly.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.